--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,8 @@
     "webpack": "^1.12.14"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
