--- a/assets/package.json
+++ b/assets/package.json
@@ -11,13 +11,17 @@
   "devDependencies": {
     "babel-core": "^6.6.0",
     "babel-loader": "^6.2.4",
-    "jsx-loader": "^0.13.2",
-    "webpack": "^1.12.14"
-  },
-  "dependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.4.2",
+    "normalize.css": "^3.0.3",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
-  }
+    "react-dom": "^0.14.7",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14"
+  },
+  "dependencies": {}
 }
