--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "lodash": "^4.6.1",
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
     "react": "^0.14.7",
